# Rust_BitcoinMiner

./: README.md  algo.py  conn.rs  main.rs  miner.py  pass.txt  test.py
4328112_1319658_cryptominer/: ~$Dok.docx
Archiv/: Cargo.toml
Archiv/src/: main.rs  miner.rs
igw/: answer.json  miner.py  pass.txt  should_answer.json
rustMiner/: Cargo.toml
rustMiner/src/: connect.rs  main.rs  mains.rs  message.rs
rust_miner/: Cargo.toml
rust_miner/src/: connect.rs  hashable.rs  job.rs  lib.rs  main.rs  menu.rs  miner.rs
src_dev/: lib.rs  main.rs  mains.rs  message.rs
