[package]
name = "rust_miner"
version = "0.1.0"
authors = ["AndrikSeeger <andrik.seeger@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
bitcoin = "0.26.0"
sha2 = "0.9.5"
hex-literal = "0.3.1"
hex = "0.4.3"
bitcoin_hashes = "0.9.6"
byteorder = "1.4.3"
crypto-hash = "0.3.4"